Pontoon: Update Welsh (cy) localization of Firefox Co-authored-by: Rhoslyn Prys <rprys@posteo.net>

--- a/cy/browser/chrome/browser/browser.properties
+++ b/cy/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = Piniwyd!
 confirmationHint.pinTab.description = Rhowch glic de i'r tab i'w ddabinio.
 
 confirmationHint.passwordSaved.label = Cyfrinair wedi'i gadw!
+confirmationHint.loginRemoved.label = Mewngofnodi wedi'i dynnu!
 confirmationHint.breakageReport.label = Anfonwyd yr adroddiad. Diolch!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
