--- a/cy/dom/chrome/accessibility/mac/accessible.properties
+++ b/cy/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       prif
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      rhybudd
 alertDialog =      deialog rhybudd
+dialog      =      deialog
 article     =      erthygl
 document    =      dogfen
 # The (spoken) role description for the WAI-ARIA figure role
