Pontoon: Update Ukrainian (uk) localization of Firefox Co-authored-by: Artem Polivanchuk <a.polivanchuk@outlook.com>

--- a/uk/browser/chrome/browser/browser.properties
+++ b/uk/browser/chrome/browser/browser.properties
@@ -661,7 +661,7 @@ contentBlocking.cryptominers.blocking.label=Блокування
 # LOCALIZATION NOTE (contentBlocking.intro.title): %S is brandShortName.
 contentBlocking.intro.title=Нове в %S: Блокування вмісту
 # LOCALIZATION NOTE (contentBlocking.v1.intro.description): %S is brandShortName.
-contentBlocking.intro.v1.description=Коли ви бачите зображення щита, %S блокує частини сторінки, що можуть сповільнювати браузер і стежити за вами.
+contentBlocking.intro.v1.description=Коли ви бачите зображення щита, %S блокує частини сторінки, що можуть сповільнювати &brandShortName; і стежити за вами.
 contentBlocking.intro.v2.description=Підвищення рівня приватності при захисті від стеження тепер є частиною функції блокування вмісту. Якщо ви бачите піктограму щита, це означає, що працює блокування вмісту.
 # LOCALIZATION NOTE (trackingProtection.intro.step1of3): Indicates that the intro panel is step one of three in a tour.
 trackingProtection.intro.step1of3=1 із 3
@@ -670,7 +670,7 @@ trackingProtection.intro.nextButton.label=Далі
 trackingProtection.icon.activeTooltip=Спроби стеження заблоковано
 trackingProtection.icon.disabledTooltip=Виявлено вміст стеження
 
-trackingProtection.icon.activeTooltip2=Блокування стеження соціальних мереж, куків, що стежать між сайтами, а також зчитування відбитків браузера.
+trackingProtection.icon.activeTooltip2=Блокування стеження соціальних мереж, куків, що стежать між сайтами, а також зчитування цифрового відбитка.
 trackingProtection.icon.disabledTooltip2=Розширений захист від стеження для цього сайту вимкнено.
 # LOCALIZATION NOTE (trackingProtection.icon.noTrackersDetectedTooltip): %S is brandShortName.
 trackingProtection.icon.noTrackersDetectedTooltip=%S не виявив відомих елементів стеження на цій сторінці.
@@ -690,7 +690,7 @@ protections.disableAriaLabel=Вимкнути захист для %S
 protections.enableAriaLabel=Увімкнути захист для %S
 
 # Blocking and Not Blocking sub-views in the Protections Panel
-protections.blocking.fingerprinters.title=Заблоковано зчитування відбитків браузера
+protections.blocking.fingerprinters.title=Заблоковано зчитування цифрового відбитка
 protections.blocking.cryptominers.title=Заблоковано криптомайренів
 protections.blocking.cookies.trackers.title=Блокування куків, що стежать між сайтами
 protections.blocking.cookies.3rdParty.title=Заблоковано сторонні куки
@@ -698,7 +698,7 @@ protections.blocking.cookies.all.title=Усі куки заблоковано
 protections.blocking.cookies.unvisited.title=Заблоковано куки з невідвіданих сайтів
 protections.blocking.trackingContent.title=Блокування вмісту зі стеженням
 protections.blocking.socialMediaTrackers.title=Заблоковано стеження соціальних мереж
-protections.notBlocking.fingerprinters.title=Зчитування відбитку браузера не блокується
+protections.notBlocking.fingerprinters.title=Зчитування цифрового відбитка не блокується
 protections.notBlocking.cryptominers.title=Криптомайнери не блокуються
 protections.notBlocking.cookies.3rdParty.title=Сторонні куки не блокуються
 protections.notBlocking.cookies.all.title=Куки не блокуються
@@ -834,7 +834,7 @@ addKeywordTitleAutoFill=Шукати %S
 
 # safeModeRestart
 safeModeRestartPromptTitle=Перезапуск з вимкненими додатками
-safeModeRestartPromptMessage=Ви впевнені що хочете вимкнути всі додатки та перезапустити браузер?
+safeModeRestartPromptMessage=Ви впевнені що хочете вимкнути всі додатки та перезапустити &brandShortName;?
 safeModeRestartButton=Перезапуск
 
 # LOCALIZATION NOTE (browser.menu.showCharacterEncoding): Set to the string
@@ -848,12 +848,12 @@ safeModeRestartButton=Перезапуск
 browser.menu.showCharacterEncoding=false
 
 # Mozilla data reporting notification (Telemetry, Firefox Health Report, etc)
-dataReportingNotification.message       = %1$S автоматично відправляє деякі дані в %2$S, щоб ми могли зробити вашу роботу в браузері зручнішою.
+dataReportingNotification.message       = %1$S автоматично відправляє деякі дані в %2$S, щоб ми могли вдосконалити вашу роботу в &brandShortName;.
 dataReportingNotification.button.label  = Вибрати чим ділитись
 dataReportingNotification.button.accessKey  = В
 
 # Process hang reporter
-processHang.label = Веб-сторінка сповільнює роботу браузера. Що ви бажаєте зробити?
+processHang.label = Вебсторінка сповільнює роботу &brandShortName;. Що ви бажаєте зробити?
 # LOCALIZATION NOTE (processHang.add-on.label): %1$S is the name of the
 # extension. %2$S is the name of the product (e.g., Firefox)
 processHang.add-on.label = Сценарій в розширенні “%1$S” спричиняє сповільнення %2$S.
