--- a/uk/browser/chrome/browser/migration/migration.properties
+++ b/uk/browser/chrome/browser/migration/migration.properties
@@ -25,7 +25,7 @@ importedEdgeReadingList=Список читання (з Edge)
 # Import Sources
 # Note: When adding an import source for profile reset, add the string name to
 # resetProfile.js if it should be listed in the reset dialog.
-1_ie=Властивості браузера
+1_ie=Налаштування Інтернету
 1_edge=Налаштування
 1_safari=Налаштування
 1_chrome=Параметри
