Pontoon: Update Finnish (fi) localization of Firefox Co-authored-by: Jiri Grönroos <jiri.gronroos@iki.fi>

--- a/fi/browser/chrome/browser/browser.properties
+++ b/fi/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = Kiinnitetty!
 confirmationHint.pinTab.description = Napsauta välilehteä oikealla painikkeella poistaaksesi kiinnityksen.
 
 confirmationHint.passwordSaved.label = Salasana tallennettu!
+confirmationHint.loginRemoved.label = Kirjautumistieto poistettu!
 confirmationHint.breakageReport.label = Raportti lähetetty. Kiitos!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
