--- a/fi/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/fi/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -20,9 +20,11 @@ updateLoginMsg = Päivitetäänkö kirjautumista?
 updateLoginMsgNoUser = Päivitetäänkö salasana?
 updateLoginMsgAddUsername = Haluatko lisätä käyttäjätunnuksen tallennetuun salasanaan?
 updateLoginButtonText = Päivitä
-updateLoginButtonAccessKey = P
+updateLoginButtonAccessKey = Ä
 updateLoginButtonDeny.label = Älä päivitä
 updateLoginButtonDeny.accesskey = i
+updateLoginButtonDelete.label = Poista tallennettu kirjautumistieto
+updateLoginButtonDelete.accesskey = P
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
@@ -61,7 +63,6 @@ loginHostAge=%1$S (%2$S)
 # LOCALIZATION NOTE (noUsername):
 # String is used on the context menu when a login doesn't have a username.
 noUsername=Ei käyttäjätunnusta
-
 duplicateLoginTitle=Kirjautuminen jo tallennettu
 duplicateLogin=Sama kirjautuminen on jo tallennettu.
 
