Pontoon: Update Ukrainian (uk) localization of Firefox Co-authored-by: Artem Polivanchuk <a.polivanchuk@outlook.com>

--- a/uk/browser/chrome/browser/browser.properties
+++ b/uk/browser/chrome/browser/browser.properties
@@ -91,8 +91,8 @@ webextPerms.sideloadMenuItem=%1$S додано до %2$S
 # %S is replaced with the localized name of the extension being installed.
 # Note, this string will be used as raw markup. Avoid characters like <, >, &
 webextPerms.sideloadHeader=%S додано
-webextPerms.sideloadText2=Інша програма на вашому комп'ютері встановила додаток, що може вплинути на ваш &brandShortName;. Ознайомтесь із запитами дозволів для цього додатка і виберіть Увімкнути чи Скасувати (щоб залишити його вимкненим).
-webextPerms.sideloadTextNoPerms=Інша програма на вашому комп'ютері встановила додаток, що може вплинути на ваш &brandShortName;. Оберіть Увімкнути чи Скасувати (щоб залишити його вимкненим).
+webextPerms.sideloadText2=Інша програма на вашому комп'ютері встановила додаток, що може вплинути на ваш браузер. Ознайомтесь із запитами дозволів для цього додатку і виберіть Увімкнути чи Скасувати (щоб залишити його вимкненим).
+webextPerms.sideloadTextNoPerms=Інша програма на вашому комп'ютері встановила додаток, що може вплинути на ваш браузер. Оберіть Увімкнути чи Скасувати (щоб залишити його вимкненим).
 
 webextPerms.sideloadEnable.label=Увімкнути
 webextPerms.sideloadEnable.accessKey=У
@@ -124,13 +124,13 @@ webextPerms.optionalPermsDeny.label=Заборонити
 webextPerms.optionalPermsDeny.accessKey=б
 
 webextPerms.description.bookmarks=Читання й зміна закладок
-webextPerms.description.browserSettings=Читання й зміна налаштувань &brandShortName;
+webextPerms.description.browserSettings=Читання й зміна налаштувань браузера
 webextPerms.description.browsingData=Стерти нещодавню історію перегляду, куки та пов'язані дані
 webextPerms.description.clipboardRead=Отримання даних з буфера обміну
 webextPerms.description.clipboardWrite=Збереження даних в буфер обміну
 webextPerms.description.devtools=Розширте інструменти розробника для доступу до своїх даних у відкритих вкладках
 webextPerms.description.dns=Доступ до IP адреси та інформації про ім'я розташування
-webextPerms.description.downloads=Завантаження файлів, а також читання й зміна історії &brandShortName;
+webextPerms.description.downloads=Завантаження файлів, а також читання й зміна історії браузера
 webextPerms.description.downloads.open=Відкрити файли, завантажені на ваш комп'ютер
 webextPerms.description.find=Читати текст всіх відкритих вкладок
 webextPerms.description.geolocation=Доступ до вашого розташування
@@ -142,13 +142,13 @@ webextPerms.description.nativeMessaging=Обмін повідомленнями 
 webextPerms.description.notifications=Показ сповіщень
 webextPerms.description.pkcs11=Надавати служби криптографічної авторизації
 webextPerms.description.privacy=Перегляд і редагування налаштувань приватності
-webextPerms.description.proxy=Керування налаштуваннями проксі &brandShortName;
+webextPerms.description.proxy=Керування налаштуваннями проксі браузера
 webextPerms.description.sessions=Доступ до нещодавно закритих вкладок
-webextPerms.description.tabs=Доступ до вкладок &brandShortName;
-webextPerms.description.tabHide=Приховування і показ вкладок &brandShortName;
+webextPerms.description.tabs=Доступ до вкладок браузера
+webextPerms.description.tabHide=Приховування і показ вкладок браузера
 webextPerms.description.topSites=Доступ до історії перегляду
 webextPerms.description.unlimitedStorage=Зберігання необмеженої кількості даних на стороні клієнта
-webextPerms.description.webNavigation=Доступ до активності &brandShortName; під час навігації
+webextPerms.description.webNavigation=Доступ до активності браузера під час навігації
 
 webextPerms.hostDescription.allUrls=Доступ до ваших даних для всіх вебсайтів
 
@@ -324,7 +324,7 @@ pluginInfo.unknownPlugin=Невідомий
 
 # Flash activation doorhanger UI
 flashActivate.message=Ви хочете дозволити виконання Adobe Flash на цьому сайті? Дозволяйте Adobe Flash лише на сайтах, яким ви довіряєте.
-flashActivate.outdated.message=Ви хочете дозволити виконання застарілої версії Adobe Flash на цьому сайті? Застаріла версія може вплинути на швидкодію та безпеку &brandShortName;.
+flashActivate.outdated.message=Ви хочете дозволити виконання застарілої версії Adobe Flash на цьому сайті? Застаріла версія може вплинути на швидкодію та безпеку браузера.
 flashActivate.remember=Запам’ятати це рішення
 flashActivate.noAllow=Не дозволяти
 flashActivate.allow=Дозволити
@@ -661,7 +661,7 @@ contentBlocking.cryptominers.blocking.label=Блокування
 # LOCALIZATION NOTE (contentBlocking.intro.title): %S is brandShortName.
 contentBlocking.intro.title=Нове в %S: Блокування вмісту
 # LOCALIZATION NOTE (contentBlocking.v1.intro.description): %S is brandShortName.
-contentBlocking.intro.v1.description=Коли ви бачите зображення щита, %S блокує частини сторінки, що можуть сповільнювати &brandShortName; і стежити за вами.
+contentBlocking.intro.v1.description=Коли ви бачите зображення щита, %S блокує частини сторінки, що можуть сповільнювати роботу або стежити за вами в Інтернеті.
 contentBlocking.intro.v2.description=Підвищення рівня приватності при захисті від стеження тепер є частиною функції блокування вмісту. Якщо ви бачите піктограму щита, це означає, що працює блокування вмісту.
 # LOCALIZATION NOTE (trackingProtection.intro.step1of3): Indicates that the intro panel is step one of three in a tour.
 trackingProtection.intro.step1of3=1 із 3
@@ -834,7 +834,7 @@ addKeywordTitleAutoFill=Шукати %S
 
 # safeModeRestart
 safeModeRestartPromptTitle=Перезапуск з вимкненими додатками
-safeModeRestartPromptMessage=Ви впевнені що хочете вимкнути всі додатки та перезапустити &brandShortName;?
+safeModeRestartPromptMessage=Ви впевнені що хочете вимкнути всі додатки та перезапустити браузер?
 safeModeRestartButton=Перезапуск
 
 # LOCALIZATION NOTE (browser.menu.showCharacterEncoding): Set to the string
@@ -848,12 +848,12 @@ safeModeRestartButton=Перезапуск
 browser.menu.showCharacterEncoding=false
 
 # Mozilla data reporting notification (Telemetry, Firefox Health Report, etc)
-dataReportingNotification.message       = %1$S автоматично відправляє деякі дані в %2$S, щоб ми могли вдосконалити вашу роботу в &brandShortName;.
+dataReportingNotification.message       = %1$S автоматично відправляє деякі дані в %2$S, щоб ми могли вдосконалити вашу роботу.
 dataReportingNotification.button.label  = Вибрати чим ділитись
 dataReportingNotification.button.accessKey  = В
 
 # Process hang reporter
-processHang.label = Вебсторінка сповільнює роботу %S. Що ви бажаєте зробити?
+processHang.label = Вебсторінка сповільнює роботу браузера. Що ви бажаєте зробити?
 # LOCALIZATION NOTE (processHang.add-on.label): %1$S is the name of the
 # extension. %2$S is the name of the product (e.g., Firefox)
 processHang.add-on.label = Сценарій в розширенні “%1$S” спричиняє сповільнення %2$S.
