Pontoon: Update Ukrainian (uk) localization of Firefox Co-authored-by: Artem Polivanchuk <a.polivanchuk@outlook.com>

--- a/uk/browser/chrome/browser/taskbar.properties
+++ b/uk/browser/chrome/browser/taskbar.properties
@@ -3,9 +3,9 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 taskbar.tasks.newTab.label=Відкрити нову вкладку
-taskbar.tasks.newTab.description=Відкрити нову вкладку браузера.
+taskbar.tasks.newTab.description=Відкрити нову вкладку $BrandShortName.
 taskbar.tasks.newWindow.label=Відкрити нове вікно
-taskbar.tasks.newWindow.description=Відкрити нове вікно браузера.
+taskbar.tasks.newWindow.description=Відкрити нове вікно $BrandShortName.
 taskbar.tasks.newPrivateWindow.label=Приватне вікно
 taskbar.tasks.newPrivateWindow.description=Відкрити нове вікно в режимі приватного перегляду.
 taskbar.frequent.label=Часті
