Pontoon: Update Ukrainian (uk) localization of Firefox Co-authored-by: Artem Polivanchuk <a.polivanchuk@outlook.com>

--- a/uk/browser/chrome/browser/browser.properties
+++ b/uk/browser/chrome/browser/browser.properties
@@ -91,7 +91,7 @@ webextPerms.sideloadMenuItem=%1$S додано до %2$S
 # %S is replaced with the localized name of the extension being installed.
 # Note, this string will be used as raw markup. Avoid characters like <, >, &
 webextPerms.sideloadHeader=%S додано
-webextPerms.sideloadText2=Інша програма на вашому комп'ютері встановила додаток, що може вплинути на ваш браузер. Ознайомтесь із запитами дозволів для цього додатку і виберіть Увімкнути чи Скасувати (щоб залишити його вимкненим).
+webextPerms.sideloadText2=Інша програма на вашому комп'ютері встановила додаток, що може вплинути на ваш $BrandShortName. Ознайомтесь із запитами дозволів для цього додатка й оберіть Увімкнути чи Скасувати (щоб залишити його вимкненим).
 webextPerms.sideloadTextNoPerms=Інша програма на вашому комп'ютері встановила додаток, що може вплинути на ваш $BrandShortName. Оберіть Увімкнути чи Скасувати (щоб залишити його вимкненим).
 
 webextPerms.sideloadEnable.label=Увімкнути
