Pontoon: Update Hungarian (hu) localization of Firefox Co-authored-by: Balázs Meskó <meskobalazs@mailbox.org>

--- a/hu/browser/chrome/browser/browser.properties
+++ b/hu/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = Rögzítve!
 confirmationHint.pinTab.description = A feloldáshoz kattintson a fülre jobb egérgombbal.
 
 confirmationHint.passwordSaved.label = Jelszó elmentve.
+confirmationHint.loginRemoved.label = Bejelentkezés eltávolítva!
 confirmationHint.breakageReport.label = Jelentés beküldve. Köszönjük!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
