--- a/hu/dom/chrome/accessibility/mac/accessible.properties
+++ b/hu/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       elsődleges
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      riasztás
 alertDialog =      figyelmeztető ablak
+dialog      =      párbeszédpanel
 article     =      cikk
 document    =      dokumentum
 # The (spoken) role description for the WAI-ARIA figure role
