--- a/hu/dom/chrome/security/security.properties
+++ b/hu/dom/chrome/security/security.properties
@@ -63,6 +63,7 @@ InsecurePasswordsPresentOnIframe=Jelszómezők találhatók egy nem biztonságos
 # LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
 LoadingMixedActiveContent2=Vegyes (nem biztonságos) aktív tartalom („%1$S”) betöltése egy biztonságos oldalon
 LoadingMixedDisplayContent2=Vegyes (nem biztonságos) megjelenített tartalom („%1$S”) betöltése egy biztonságos oldalon
+LoadingMixedDisplayObjectSubrequestDeprecation=A(z) „%1$S” vegyes (nem biztonságos) tartalom betöltése egy modulban nem javasolt, és hamarosan blokkolva lesz.
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=Ha egy iframe sandbox attribútumában az allow-scripts és az allow-same-origin is be van állítva, akkor az eltávolíthatja a sandboxingot.
 
