Pontoon: Update Swedish (sv-SE) localization of Firefox Co-authored-by: Andreas Pettersson <az@kth.se>

--- a/sv-SE/dom/chrome/security/security.properties
+++ b/sv-SE/dom/chrome/security/security.properties
@@ -63,6 +63,7 @@ InsecurePasswordsPresentOnIframe=Lösenordsfält i en osäker (http://) iframe. 
 # LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
 LoadingMixedActiveContent2=Laddar blandat (osäkert) aktivt innehåll “%1$S" på en säker sida
 LoadingMixedDisplayContent2=Laddar blandat (osäkert) visningsinnehåll “%1$S" på en säker sida
+LoadingMixedDisplayObjectSubrequestDeprecation=Att ladda blandat (osäkert) innehåll “%1$S” i en insticksmodul på en säker sida avråds och kommer att blockeras snart.
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=En iframe som har både allow-scripts och allow-same-origin för sitt sandbox-attribut kan ta bort sin sandboxning.
 
