--- a/sv-SE/toolkit/chrome/global/aboutReader.properties
+++ b/sv-SE/toolkit/chrome/global/aboutReader.properties
@@ -46,6 +46,7 @@ aboutReader.toolbar.typeControls=Typkontroller
 # %S is replaced by Pocket.
 readerView.savetopocket.label=Spara till %S
 # This is a label used for done option in the toolbar
+readerView.done.label=Klar
 # These are used for the Reader View toolbar button and the menuitem within the
 # View menu.
 readerView.enter=Öppna läsarvy
