--- a/sv-SE/dom/chrome/accessibility/mac/accessible.properties
+++ b/sv-SE/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       huvudinnehåll
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      avisering
 alertDialog =      aviseringsfönster
+dialog      =      dialog
 article     =      artikel
 document    =      dokument
 # The (spoken) role description for the WAI-ARIA figure role
