--- a/sv-SE/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/sv-SE/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -24,6 +24,7 @@ updateLoginButtonAccessKey = U
 updateLoginButtonDeny.label = Uppdatera inte
 updateLoginButtonDeny.accesskey = n
 updateLoginButtonDelete.label = Ta bort sparad inloggning
+updateLoginButtonDelete.accesskey = T
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
