--- a/fr/browser/pdfviewer/chrome.properties
+++ b/fr/browser/pdfviewer/chrome.properties
@@ -15,5 +15,5 @@
 # Chrome notification bar messages and buttons
 unsupported_feature=Il est possible que ce document PDF ne s’affiche pas correctement.
 unsupported_feature_forms=Ce document PDF contient des formulaires. Le remplissage de champs de formulaires n’est pas pris en charge.
-open_with_different_viewer=Ouvrir avec un autre lecteur PDF
+open_with_different_viewer=Ouvrir avec une autre visionneuse PDF
 open_with_different_viewer.accessKey=o
