--- a/es-AR/browser/chrome/browser/browser.properties
+++ b/es-AR/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = ¡Pegada!
 confirmationHint.pinTab.description = Haga clic derecho en la pestaña para despegarla.
 
 confirmationHint.passwordSaved.label = ¡Contraseña guardada!
+confirmationHint.loginRemoved.label = ¡Inicio de sesión eliminado!
 confirmationHint.breakageReport.label = Informe enviado. ¡Gracias!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
