Pontoon: Update Vietnamese (vi) localization of Firefox Co-authored-by: Quế Tùng <best.cloney.1301@gmail.com>

--- a/vi/browser/chrome/browser/browser.properties
+++ b/vi/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = Đã ghim!
 confirmationHint.pinTab.description = Nhấp chuột phải vào thẻ để bỏ ghim nó.
 
 confirmationHint.passwordSaved.label = Mật khẩu đã được lưu!
+confirmationHint.loginRemoved.label = Đã xóa thông tin đăng nhập!
 confirmationHint.breakageReport.label = Đã gửi báo cáo. Cảm ơn bạn!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
