--- a/vi/dom/chrome/accessibility/mac/accessible.properties
+++ b/vi/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       chính
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      cảnh báo
 alertDialog =      hộp thoại cảnh báo
+dialog      =      hộp thoại
 article     =      bài viết
 document    =      tài liệu
 # The (spoken) role description for the WAI-ARIA figure role
