--- a/vi/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/vi/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = Cập nhật
 updateLoginButtonAccessKey = U
 updateLoginButtonDeny.label = Không cập nhật
 updateLoginButtonDeny.accesskey = D
+updateLoginButtonDelete.label = Xóa thông tin đăng nhập đã lưu
+updateLoginButtonDelete.accesskey = R
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
@@ -61,7 +63,6 @@ loginHostAge=%1$S (%2$S)
 # LOCALIZATION NOTE (noUsername):
 # String is used on the context menu when a login doesn't have a username.
 noUsername=Không có tên người dùng
-
 duplicateLoginTitle=Đã có thông tin đăng nhập này
 duplicateLogin=Thông tin đăng nhập này đã tồn tại.
 
