Pontoon: Update Indonesian (id) localization of Firefox Co-authored-by: Nuri Abidin <nuri.abidin@gmail.com> Co-authored-by: Fauzan Alfi <fauzan.alfi@gmail.com>

--- a/id/browser/chrome/browser/browser.properties
+++ b/id/browser/chrome/browser/browser.properties
@@ -440,7 +440,6 @@ newWindowButton.tooltip=Buka jendela baru (%S)
 newTabButton.tooltip=Buka tab baru (%S)
 
 newTabContainer.tooltip=Buka tab baru (%S)\nTekan dan tahan untuk membuka tab kontainer baru
-
 newTabAlwaysContainer.tooltip=Pilih kontainer untuk membuja tab baru
 
 # Offline web applications
@@ -701,6 +700,8 @@ protections.blocking.trackingContent.title=Konten Pelacak Diblokir
 protections.blocking.socialMediaTrackers.title=Pelacak Media Sosial Diblokir
 protections.notBlocking.fingerprinters.title=Tidak Memblokir Pelacak Sidik
 protections.notBlocking.cryptominers.title=Tidak Memblokir Penambang Kripto
+protections.notBlocking.cookies.3rdParty.title=Tidak memblokir Kuki Pihak Ketiga
+protections.notBlocking.cookies.all.title=Tidak Memblokir Kuki
 protections.notBlocking.crossSiteTrackingCookies.title=Tidak Memblokir Kuki Pelacakan Lintas
 protections.notBlocking.trackingContent.title=Tidak Memblokir Konten Pelacak
 protections.notBlocking.socialMediaTrackers.title=Tidak Memblokir Pelacak Media Sosial
@@ -1207,14 +1208,6 @@ storageAccess.DontAllow.accesskey = J
 # %2$S is the name of the site URL (www.site2.example) that the user is visiting.  This is the same domain name displayed in the address bar.
 storageAccess.message = Apakah Anda akan memberikan akses kepada %1$S untuk melacak aktivitas penjelajahan di %2$S?
 
-# LOCALIZATION NOTE (storageAccess.description.label):
-# %1$S is the name of the site URL (www.site1.example) trying to track the user's activity.
-# %2$S will be replaced with the localized version of storageAccess.description.learnmore.  This text will be converted into a hyper-link linking to the SUMO page explaining the concept of third-party trackers.
-storageAccess.description.label = Anda mungkin ingin memblokir %1$S pada situs ini jika Anda tak mengenali atau mempercayainya. Pelajari lebih lanjut tentang %2$S
-# LOCALIZATION NOTE (storageAccess.description.learnmore):
-# The value of this string is embedded inside storageAccess.description.label.  See the localization note for storageAccess.description.label.
-storageAccess.description.learnmore = pelacak pihak ketiga
-
 # LOCALIZATION NOTE (storageAccess2.message):
 # %1$S is the name of the site URL (www.site1.example) trying to track the user's activity.
 # %2$S is the name of the site URL (www.site2.example) that the user is visiting.  This is the same domain name displayed in the address bar.
@@ -1229,9 +1222,14 @@ confirmationHint.pinTab.label = Disematkan!
 confirmationHint.pinTab.description = Klik kanan tab untuk melepaskan sematan.
 
 confirmationHint.passwordSaved.label = Sandi disimpan!
+confirmationHint.loginRemoved.label = Log masuk dihapus!
 confirmationHint.breakageReport.label = Laporan terkirim. Terima kasih!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
 # Used by the export of user's live bookmarks to an OPML file as a title for the file.
 # %S will be replaced with brandShortName
 livebookmarkMigration.title                      = %S Markah Hidup
+
+# LOCALIZATION NOTE (gnomeSearchProviderSearch):
+# Used for search by Gnome Shell activity screen, %S is a searched string.
+gnomeSearchProviderSearch=Cari di web untuk %S
