--- a/id/dom/chrome/dom/dom.properties
+++ b/id/dom/chrome/dom/dom.properties
@@ -424,3 +424,5 @@ MathML_DeprecatedStyleAttributeWarning=Atribut MathML “background”, “color
 MathML_DeprecatedXLinkAttributeWarning=Atribut XLink “href”, “type”, “show”, dan “actuate” sudah usang untuk elemen MathML dan tidak akan didukung di masa mendatang.
 WebShareAPI_Failed=Operasi berbagi gagal.
 WebShareAPI_Aborted=Operasi berbagi dibatalkan.
+# LOCALIZATION NOTE (UnknownProtocolNavigationPrevented): %1$S is the destination URL.
+UnknownProtocolNavigationPrevented=Navigasi yang dicegah ke “%1$S” karena protokol yang tidak dikenal.
