--- a/id/dom/chrome/layout/css.properties
+++ b/id/dom/chrome/layout/css.properties
@@ -180,5 +180,7 @@ PEMoreThanOneGridRepeatAutoFillInNameList=Hanya satu repeat(auto-fill, …) yang
 PEMoreThanOneGridRepeatAutoFillFitInTrackList=Hanya satu repeat(auto-fill, …) atau epeat(auto-fit, …) yang diizinkan daftar jalur.
 PEMoreThanOneGridRepeatTrackSize=Hanya satu ukuran jalur yang diizinkan dalam repeat(auto-fit/auto-fill, …).
 
+PEDisallowedImportRule=@import rules belum valid di stylesheet yang dibuat.
+
 TooLargeDashedRadius=Batas radius terlalu besar untuk gaya ‘dashed’ (batasnya adalah 100000 px). Dirender sebagai solid.
 TooLargeDottedRadius=Batas radius terlalu besar untuk gaya ‘dotted’ (batasnya adalah 100000 px). Dirender sebagai solid.
