Pontoon: Update Indonesian (id) localization of Firefox Co-authored-by: Nuri Abidin <nuri.abidin@gmail.com> Co-authored-by: Fauzan Alfi <fauzan.alfi@gmail.com>

--- a/id/devtools/client/debugger.properties
+++ b/id/devtools/client/debugger.properties
@@ -55,6 +55,41 @@ setDirectoryRoot.accesskey=r
 removeDirectoryRoot.label=Hapus akar direktori
 removeDirectoryRoot.accesskey=d
 
+# LOCALIZATION NOTE (blackBoxAll.label): Text associated with the blackbox context menu item
+blackBoxAll.label=Kotak hitam
+
+# LOCALIZATION NOTE (blackBoxAllInGroup.label): This is the text that appears in the
+# context submenu to blackbox all files inside of the selected group
+blackBoxAllInGroup.label=Kotak hitamkan berkas untuk grup ini
+
+# LOCALIZATION NOTE (unblackBoxAllInGroup.label): This is the text that appears in the
+# context submenu to unblackbox all files inside of the selected group
+unblackBoxAllInGroup.label=Jangan kotak hitamkan berkas untuk grup ini
+
+# LOCALIZATION NOTE (blackBoxAllOutsideGroup.label): This is the text that appears in the
+# context submenu to blackbox all files outside of the selected group
+blackBoxAllOutsideGroup.label=Kotak hitamkan berkas di luar grup ini
+
+# LOCALIZATION NOTE (unblackBoxAllOutsideGroup.label): This is the text that appears in the
+# context submenu to unblackbox all files outside of the selected group
+unblackBoxAllOutsideGroup.label=Jangan kotak hitamkan berkas di luar grup ini
+
+# LOCALIZATION NOTE (blackBoxAllInDir.label): This is the text that appears in the
+# context submenu to blackbox all files inside of the selected directory
+blackBoxAllInDir.label=Kotak hitamkan berkas di direktori ini
+
+# LOCALIZATION NOTE (unblackBoxAllInDir.label): This is the text that appears in the
+# context submenu to unblackbox all files inside of the selected directory
+unblackBoxAllInDir.label=Jangan kotak hitamkan berkas di direktori ini
+
+# LOCALIZATION NOTE (blackBoxAllOutsideDir.label): This is the text that appears in the
+# context submenu to blackbox all files outside of the selected directory
+blackBoxAllOutsideDir.label=Kotak hitamkan berkas di luar direktori ini
+
+# LOCALIZATION NOTE (unblackBoxAllOutsideDir.label: This is the text that appears in the
+# context submenu to unblackbox all files outside of the selected directory
+unblackBoxAllOutsideDir.label=Jangan kotak hitamkan berkas di luar direktori ini
+
 # LOCALIZATION NOTE (copyFunction.label): This is the text that appears in the
 # context menu to copy the function the user selected
 copyFunction.label=Fungsi Salin
@@ -651,6 +686,17 @@ inlinePreview.show.label=Tampilkan pratinjau sebaris
 # for hiding the inline preview block
 inlinePreview.hide.label=Sembunyikan pratinjau sebaris
 
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=Pengaturan Debugger
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+settings.disableJavaScript.label=Nonaktifkan JavaScript
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=Nonaktifkan JavaScript (Butuh penyegaran)
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 preview.noProperties=Tidak ada properti
@@ -705,6 +751,9 @@ watchpoints.getWatchpoint=Properti get
 # LOCALIZATION NOTE (watchpoints.setWatchpoint): This is the text that appears in the
 # watchpoints submenu to add a "set" watchpoint on an object property.
 watchpoints.setWatchpoint=Properti set
+
+# LOCALIZATION NOTE (watchpoints.getOrSetWatchpoint): This is the text that appears in the
+# watchpoints submenu to add a "set" watchpoint on an object property.
 
 # LOCALIZATION NOTE (watchpoints.removeWatchpoint): This is the text that appears in the
 # context menu to delete a watchpoint on an object property.
@@ -1053,11 +1102,6 @@ whyPaused.mutationBreakpointRemoved=Dihapus:
 # in a info block explaining how the debugger is currently paused at
 # a JS execution
 whyPaused.interrupted=Dijeda saat Eksekusi
-
-# LOCALIZATION NOTE (whyPaused.replayForcedPause): The text that is displayed
-# in a info block explaining how the debugger is currently paused in a
-# recording.
-whyPaused.replayForcedPause=Dijeda dalam Perekaman
 
 # LOCALIZATION NOTE (whyPaused.resumeLimit): The text that is displayed
 # in a info block explaining how the debugger is currently paused while stepping
