--- a/id/browser/installer/nsisstrings.properties
+++ b/id/browser/installer/nsisstrings.properties
@@ -27,12 +27,18 @@ STUB_CLEANUP_PAVEOVER_BUTTON=&Perbarui
 STUB_CLEANUP_REINSTALL_BUTTON=Pasang &ulang
 STUB_CLEANUP_CHECKBOX_LABEL=&Kembali ke setelan baku dan hapus pengaya lama untuk kinerja yang optimal
 
+STUB_CLEANUP_PAVEOVER_BUTTON2=Perbarui
+STUB_CLEANUP_REINSTALL_BUTTON2=Pasang ulang
+STUB_CLEANUP_CHECKBOX_LABEL2=Kembalikan pengaturan baku dan hapus pengaya lama untuk kinerja yang optimal
+
 STUB_INSTALLING_LABEL2=Sekarang memasang…
 # The \n in the next string is intended to force a nice-looking layout in en-US
 # and can be moved or deleted as needed. There's no practical limit on the
 # number of lines available.
 STUB_INSTALLING_HEADLINE=Utamakan privasi Anda.\nBergabunglah dalam $BrandProductName.
 STUB_INSTALLING_BODY=Dapatkan produk-produk kami lainnya yang mengutamakan privasi, dan pelajari bagaimana tetap cerdas dan aman di dunia maya.
+STUB_INSTALLING_HEADLINE2=Mengoptimalkan pengaturan Anda untuk kecepatan, privasi, dan keamanan.
+STUB_INSTALLING_BODY2=$BrandShortName akan siap hanya dalam beberapa saat.
 STUB_BLURB_FIRST1=$BrandShortName tercepat dan paling responsif
 STUB_BLURB_SECOND1=Pemuatan laman dan perpindahan tab yang lebih cepat
 STUB_BLURB_THIRD1=Penjelajahan pribadi paling ampuh
