[S] devtools: Bug 1617240 - Add reload button for remote debugging

--- a/it/devtools/client/toolbox.properties
+++ b/it/devtools/client/toolbox.properties
@@ -65,6 +65,7 @@ toolbox.debugTargetInfo.targetLabel = %1$S (%2$S)
 toolbox.debugTargetInfo.type.tab = scheda
 toolbox.debugTargetInfo.connection.usb = USB
 toolbox.debugTargetInfo.connection.network = Rete
+toolbox.debugTargetInfo.reload = Ricarica
 toolbox.debugTargetInfo.targetType.extension = Estensione
 toolbox.debugTargetInfo.targetType.process = Processo
 toolbox.debugTargetInfo.targetType.tab = Scheda
