[S] toolkit: Bug 773942 - Use a generic string for the PDF description since it is not necessarily tied to the default handler

--- a/it/toolkit/chrome/mozapps/downloads/unknownContentType.properties
+++ b/it/toolkit/chrome/mozapps/downloads/unknownContentType.properties
@@ -15,3 +15,4 @@ unknownAccept.label = Salva file
 unknownCancel.label = Annulla
 fileType = File %S
 orderedFileSizeWithType = %1$S (%2$S %3$S)
+pdfHandlerDescription = PDF (Portable Document Format)
