Pontoon: Update Polish (pl) localization of Firefox Co-authored-by: Piotr Drąg <piotrdrag@gmail.com>

--- a/pl/browser/chrome/browser/browser.properties
+++ b/pl/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = Przypięto
 confirmationHint.pinTab.description = Kliknij kartę prawym przyciskiem, aby ją odpiąć.
 
 confirmationHint.passwordSaved.label = Zachowano hasło
+confirmationHint.loginRemoved.label = Usunięto dane logowania
 confirmationHint.breakageReport.label = Wysłano zgłoszenie. Dziękujemy!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
