--- a/pl/dom/chrome/accessibility/mac/accessible.properties
+++ b/pl/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       główna
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      alarm
 alertDialog =      okno alarmu
+dialog      =      okno dialogowe
 article     =      artykuł
 document    =      dokument
 # The (spoken) role description for the WAI-ARIA figure role
