--- a/pl/dom/chrome/security/security.properties
+++ b/pl/dom/chrome/security/security.properties
@@ -63,6 +63,7 @@ InsecurePasswordsPresentOnIframe=Pola haseł obecne w niezabezpieczonej (http:/
 # LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
 LoadingMixedActiveContent2=Wczytywanie mieszanej (niezabezpieczonej) interaktywnej treści „%1$S” na zabezpieczonej stronie
 LoadingMixedDisplayContent2=Wczytywanie mieszanej (niezabezpieczonej) prezentacyjnej treści „%1$S” na zabezpieczonej stronie
+LoadingMixedDisplayObjectSubrequestDeprecation=Wczytywanie mieszanej (niezabezpieczonej) treści „%1$S” we wtyczce na zabezpieczonej stronie jest niezalecane i wkrótce będzie blokowane.
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=Ramka z wartościami „allow-scripts” oraz „allow-same-origin” dla atrybutu „sandbox” może usunąć ten atrybut.
 
