--- a/pl/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/pl/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = Uaktualnij
 updateLoginButtonAccessKey = U
 updateLoginButtonDeny.label = Nie uaktualniaj
 updateLoginButtonDeny.accesskey = N
+updateLoginButtonDelete.label = Usuń zachowane dane logowania
+updateLoginButtonDelete.accesskey = z
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
@@ -61,7 +63,6 @@ loginHostAge=%1$S (%2$S)
 # LOCALIZATION NOTE (noUsername):
 # String is used on the context menu when a login doesn't have a username.
 noUsername=Bez użytkownika
-
 duplicateLoginTitle=Istniejące dane logowania
 duplicateLogin=Istnieją zachowane wcześniej duplikujące dane logowania
 
