--- a/pl/toolkit/chrome/global/aboutReader.properties
+++ b/pl/toolkit/chrome/global/aboutReader.properties
@@ -35,11 +35,18 @@ aboutReader.fontType.serif=Szeryfowa
 aboutReader.fontType.sans-serif=Bezszeryfowa
 
 # LOCALIZATION NOTE (aboutReader.fontTypeSample): String used to sample font types.
+# For followup see: https://bugzilla.mozilla.org/show_bug.cgi?id=1637089 
 aboutReader.fontTypeSample=Aa
 
 aboutReader.toolbar.close=Wygląd oryginalny
 aboutReader.toolbar.typeControls=Czcionki
 
+# This is used as a label for the Reader View toolbar button.
+# This is a label used for the Save to Pocket option in the toolbar.
+# %S is replaced by Pocket.
+readerView.savetopocket.label=Zachowaj w %S
+# This is a label used for done option in the toolbar
+readerView.done.label=Gotowe
 # These are used for the Reader View toolbar button and the menuitem within the
 # View menu.
 readerView.enter=Popraw czytelność
