Pontoon: Update Slovak (sk) localization of SeaMonkey Co-authored-by: Juraj Cigáň <kusavica@gmail.com>

--- a/sk/suite/chrome/mailnews/messenger.properties
+++ b/sk/suite/chrome/mailnews/messenger.properties
@@ -372,6 +372,8 @@ newMailAlert_message=Bola prijatá #2 nová správa pre účet #1;Boli prijaté 
 
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree=Využitých %S z %S kB
+
+# For the Quota tab in the mail folder properties dialog
 quotaPercentUsed=Zaplnené: %S%%
 
 # for message views
@@ -477,6 +479,9 @@ mailServerLoginFailedTitleWithAccount=Prihlásenie sa k účtu "%S" zlyhalo
 mailServerLoginFailed2=Prihlásenie sa k stránke %1$S ako %2$S zlyhalo.
 mailServerLoginFailedRetryButton=&Znova
 mailServerLoginFailedEnterNewPasswordButton=Z&adať nové heslo
+
+confirmMarkAllFoldersReadTitle=Označiť všetky priečinky ako prečítané
+confirmMarkAllFoldersReadMessage=Naozaj chcete označiť všetky správy vo všetkých priečinkoch ako prečítané?
 
 # LOCALIZATION NOTE (junkBarMessage): %S is the brandname
 junkBarMessage=%S si myslí, že táto správa je nevyžiadaná
